# dat-bitch-cartrita

./:  import-scan-extended.sh  .babelrc.js  .bufignore  .dockerignore  .env  .env.example  .env.template  .eslintrc.json  .gitignore  .migration_state  .prettierignore  API_KEYS_STATUS_REPORT.md  API_OVERLOAD_ANALYSIS.md  CAMERA_TESTING_SOLUTION.md  CLAUDE.md  Dockerfile  Dockerfile.backend-v2  Dockerfile.frontend  Dockerfile.frontend-v2  ENVIRONMENT_SETUP.md  HYBRID_BACKEND_GUIDE.md  ITERATION_19_PERSONAL_LIFE_OS_SPECS.md  ITERATION_20_AGENT_ARCHITECTURE.md  ITERATION_21_COMPREHENSIVE_SPECS.md  MIGRATION_SUCCESS.md  MIGRATION_V1_TO_V2.md  Makefile  README.md  ROADMAP.md  SYSTEM_STATUS_REPORT.md  TASK_PROGRESS.md  V2_MIGRATION_SUMMARY.md  add_keys_to_vault.js  auto-fix-camera.js  babel.config.js  buf.gen.yaml  camera-test-utility.html  camera-warmup-utility.js  check-agent-status.js  cleanup_structure.sh  (+81 more)
.claude/: CLAUDE.md  claude-instructions.md
.github/: AI_GUIDE.md  copilot-instructions.md
.husky/: pre-commit
config/: api-key-permissions.json  github-copilot-mcp.json  nginx-frontend.conf  nginx-hybrid.conf  otel-collector-config.yml  prometheus.yml
db-init/: 0004_add_redis_hybrid_search.sql  00_setup_pgvector.sql  01_create_vault_tables.sql  01_setup_users_table.sql  02_create_iteration_19_tables.sql  02_setup_user_settings_table.sql  03_add_settings_columns.sql  03_setup_conversations_table.sql  04_comprehensive_schema.sql  04_setup_workflows_B.sql  05_knowledge_hub.sql  (+60 more)
docs/agents/: pyproject.toml
docs/orchestrator-python/: pyproject.toml
py/: README.md  (+8 more)
(+1477 files in other folders)
