
[project]
name = "cartrita-v2-agents"
version = "2.0.0"
description = "Cartrita V2 Specialized Agent Microservices"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "pydantic>=2.5.0",
    "openai>=1.3.0",
    "httpx>=0.25.0",
    "asyncio>=3.4.3",
    "python-multipart>=0.0.6"
]
