
[project]
name = "cartrita-v2-orchestrator"
version = "2.0.0"
description = "Cartrita V2 LangGraph Orchestrator"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "langsmith>=0.1.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "psycopg[binary]>=3.1.0",
    "redis>=5.0.0",
    "nats-py>=2.6.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",
    "tenacity>=8.2.0",
    "tiktoken>=0.5.0",
    "numpy>=1.24.0",
    "asyncio-throttle>=1.0.2"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0"
]
